--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,3 +1,13 @@
 /* Your styles go here */
 @import url("bootstrap/dist/css/bootstrap.min.css");
 @import url("bootstrap-icons/font/bootstrap-icons.css");
+
+
+img{
+    width: 500px;
+    height:500px;
+}
+small{
+    font-size:25px;
+    color: turquoise
+}
